--- a/imports/ui/body.html
+++ b/imports/ui/body.html
@@ -1,30 +1,31 @@
 <body>
   <div class="container">
     <header>
-      <h1>Todo List ({{incompleteCount}})</h1>
-        <label class="hide-completed">
+      <h1>Messages</h1>
+        <!-- <label class="hide-completed">
           <input type="checkbox" />
           Hide Completed Tasks
-        </label>
+        </label> -->
+        
 
-        {{> loginButtons}}
+        <button>{{> loginButtons}}</button>
+
+
         {{#if currentUser}}
-          <form class="new-task">
-            <input type="text" name="text" placeholder="Type to add new tasks" />
+          <hr>
+          <form class="new-message">
+            <input type="text" name="text" placeholder="Type to add new message" />
           </form>
+          <hr>
         {{/if}}
 
       
     </header>
  
     <ul>
-      {{#each tasks}}
-        {{> task}}
+      {{#each messages}}
+        {{> message}}
       {{/each}}
     </ul>
   </div>
 </body>
- <!-- 
-<template name="task">
-  <li>{{text}}, {{createdAt}}</li>
-</template> -->
