--- a/imports/ui/message.html
+++ b/imports/ui/message.html
@@ -1,12 +1,27 @@
 <template name="message">
   <!-- <li class="{{#if checked}}checked{{/if}} {{#if private}}private{{/if}}"> -->
-  <li>
+  
 
-    <button class="delete">&times;</button>
+    
  
     <!-- <input type="checkbox" checked="{{checked}}" class="toggle-checked" /> -->
  
-    <span class="text"><strong>{{username}}</strong> - {{text}} - <small class=messagedate>{{createdAt}}</small></span>
+    <!-- <span class="text"><strong>{{username}}</strong> - {{text}} - <small class=messagedate>{{createdAt}}</small></span> -->
+  
 
-  </li>
+  <div href="#" class="list-group-item ">
+    
+      <h5>{{username}}</h5>
+      <p class="justify-content-between">
+      	{{text}}
+      	<small>{{createdAt}}</small>
+        <button class="delete btn btn-outline-warning">&times;</button>
+
+      </p>
+
+
+
+  </div>
+
 </template>
+
