fixed responsive views

--- a/imports/ui/message.html
+++ b/imports/ui/message.html
@@ -9,19 +9,20 @@
     <!-- <span class="text"><strong>{{username}}</strong> - {{text}} - <small class=messagedate>{{createdAt}}</small></span> -->
   
 
-  <div href="#" class="list-group-item ">
+  <li href="#" class="list-group-item ">
     
       <h5>{{username}}</h5>
       <p class="justify-content-between">
       	{{text}}
-      	<small>{{createdAt}}</small>
-        <button class="delete btn btn-outline-warning">&times;</button>
-
+      	<span>
+      	  <small>{{createdAt}}</small>
+          <button class="delete btn btn-outline-warning">&times;</button>
+        </span>
       </p>
 
 
 
-  </div>
+  </li>
 
 </template>
 
