only show message delete button for message owner

--- a/imports/ui/message.html
+++ b/imports/ui/message.html
@@ -6,7 +6,7 @@
 
       <h5>{{username}}</h5>
       <p>
-      {{#if currentUser}}
+      {{#if isOwner}}
         <div class="float-md-right float-sm-right float-xs-right">
           <button class="delete btn btn-outline-warning">&times;</button>
         </div>  
