finally got a passing unit test

--- a/client/ui/message.html
+++ b/client/ui/message.html
@@ -4,7 +4,7 @@
     
    <div class="container">
 
-      <h5>{{username}}</h5>
+      <h5 class="message-username">{{userName}}</h5>
       <p>
       {{#if isOwner}}
         <div class="float-md-right float-sm-right float-xs-right">
@@ -12,7 +12,7 @@
         </div>  
       {{/if}}  
       </p>
-    	<p>{{text}}</p>
+    	<p class="message-text">{{text}}</p>
 
       <p><small><i>{{createdAt}}</i></small></p>
 
